@@ -8,6 +8,16 @@ repositories {
     mavenCentral()
 }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+tasks.withType(JavaExec) {
+    jvmArgs += "--enable-preview"
+}
+
 dependencies {
     implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
